# DipExperiments

./: .gitignore  README.md  pyproject.toml
scripts/: illustrate_map.py  run_monte_carlo_samples.py  run_sample4_negotiation_experiment.py  run_standard_experiment.py  run_triangle3_game.py
src/dip_experiments/: __init__.py  logging.py
src/dip_tom/: __init__.py
src/dip_tom/agents/: __init__.py  heuristic_agent.py  monte_carlo_agent.py  negotiator_baseline.py  random_agent.py
src/dip_tom/env/: __init__.py  adjudicator.py  game.py  map.py  orders.py  state.py
src/dip_tom/maps/: __init__.py  sample4.py  standard.py  triangle3.py
src/dip_tom/negotiation/: __init__.py  deal.py  protocol.py
src/dip_tom/utils/: __init__.py  rng.py
tests/: test_adjudicator.py  test_deals.py  test_logging.py  test_maps.py  test_orders.py  test_protocol.py  test_random_agent.py
